inception-id.inception-axum.b322525fa3a2ad9262fb5b5020766173c85662a3
Running as unit: run-p2138166-i14718274.scope; invocation ID: 1164df43c85a4344a17ee5ce7ae433f6
   Compiling proc-macro2 v1.0.92
   Compiling unicode-ident v1.0.14
   Compiling libc v0.2.172
    Checking cfg-if v1.0.0
    Checking smallvec v1.13.2
    Checking memchr v2.7.4
   Compiling autocfg v1.4.0
   Compiling shlex v1.3.0
    Checking itoa v1.0.14
   Compiling cc v1.2.4
    Checking stable_deref_trait v1.2.0
    Checking once_cell v1.20.2
   Compiling serde v1.0.219
    Checking litemap v0.7.4
    Checking writeable v0.5.5
   Compiling lock_api v0.4.12
    Checking log v0.4.22
   Compiling parking_lot_core v0.9.10
   Compiling quote v1.0.37
    Checking pin-project-lite v0.2.15
    Checking icu_locid_transform_data v1.5.0
   Compiling getrandom v0.3.3
    Checking bytes v1.9.0
   Compiling syn v2.0.90
    Checking percent-encoding v2.3.1
   Compiling version_check v0.9.5
    Checking scopeguard v1.2.0
    Checking futures-core v0.3.31
    Checking icu_properties_data v1.5.0
    Checking parking_lot v0.12.3
   Compiling slab v0.4.9
    Checking utf8_iter v1.0.4
    Checking utf16_iter v1.0.5
    Checking write16 v1.0.0
    Checking futures-sink v0.3.31
    Checking icu_normalizer_data v1.5.0
    Checking byteorder v1.5.0
    Checking form_urlencoded v1.2.1
   Compiling serde_json v1.0.140
    Checking ryu v1.0.18
    Checking socket2 v0.5.10
    Checking tracing-core v0.1.33
    Checking fnv v1.0.7
   Compiling openssl-src v300.4.1+3.4.0
    Checking http v1.2.0
    Checking signal-hook-registry v1.4.2
    Checking mio v1.0.3
   Compiling pkg-config v0.3.31
   Compiling vcpkg v0.2.15
    Checking futures-io v0.3.31
    Checking pin-utils v0.1.0
    Checking futures-task v0.3.31
    Checking tracing v0.1.41
    Checking futures-util v0.3.31
   Compiling typenum v1.18.0
    Checking rand_core v0.9.3
   Compiling generic-array v0.14.7
    Checking powerfmt v0.2.0
   Compiling thiserror v2.0.12
    Checking deranged v0.3.11
   Compiling openssl-sys v0.9.105
    Checking http-body v1.0.1
    Checking tower-service v0.3.3
    Checking bitflags v2.6.0
    Checking num-conv v0.1.0
    Checking time-core v0.1.2
   Compiling openssl v0.10.70
    Checking time v0.3.37
    Checking base64 v0.22.1
    Checking hex v0.4.3
    Checking hashbrown v0.15.2
    Checking equivalent v1.0.1
   Compiling httparse v1.9.5
    Checking foreign-types-shared v0.1.1
   Compiling ident_case v1.0.1
   Compiling strsim v0.11.1
    Checking foreign-types v0.3.2
    Checking indexmap v2.7.0
    Checking aho-corasick v1.1.3
    Checking httpdate v1.0.3
    Checking try-lock v0.2.5
   Compiling semver v1.0.25
    Checking atomic-waker v1.1.2
    Checking regex-syntax v0.8.5
    Checking tower-layer v0.3.3
   Compiling native-tls v0.2.12
    Checking want v0.3.1
    Checking futures-channel v0.3.31
    Checking sync_wrapper v1.0.2
   Compiling zerocopy v0.8.25
    Checking openssl-probe v0.1.5
    Checking http-body-util v0.1.2
    Checking crypto-common v0.1.6
   Compiling psm v0.1.26
   Compiling ahash v0.8.12
    Checking gimli v0.31.1
    Checking ipnet v2.10.1
    Checking adler2 v2.0.0
    Checking mime v0.3.17
   Compiling synstructure v0.13.1
   Compiling darling_core v0.20.10
    Checking regex-automata v0.4.9
    Checking miniz_oxide v0.8.0
    Checking addr2line v0.24.2
    Checking regex v1.11.1
   Compiling zerofrom-derive v0.1.5
   Compiling yoke-derive v0.7.5
   Compiling zerovec-derive v0.10.3
   Compiling displaydoc v0.2.5
   Compiling serde_derive v1.0.219
   Compiling icu_provider_macros v1.5.0
   Compiling zerocopy-derive v0.7.35
   Compiling tokio-macros v2.5.0
   Compiling thiserror-impl v2.0.12
    Checking zerofrom v0.1.5
    Checking yoke v0.7.5
    Checking zerovec v0.10.4
    Checking tokio v1.45.1
    Checking zerocopy v0.7.35
    Checking ppv-lite86 v0.2.20
    Checking tinystr v0.7.6
    Checking icu_collections v1.5.0
    Checking rand_chacha v0.9.0
    Checking icu_locid v1.5.0
    Checking rand v0.9.1
   Compiling openssl-macros v0.1.1
    Checking icu_provider v1.5.0
   Compiling darling_macro v0.20.10
   Compiling rustc_version v0.4.1
   Compiling darling v0.20.10
   Compiling findshlibs v0.10.2
   Compiling stacker v0.1.21
    Checking icu_locid_transform v1.5.0
    Checking object v0.36.5
   Compiling num-traits v0.2.19
    Checking rustc-demangle v0.1.24
    Checking icu_properties v1.5.1
   Compiling rustversion v1.0.18
   Compiling sentry-contexts v0.38.1
    Checking inout v0.1.4
   Compiling proc-macro-error-attr2 v2.0.0
    Checking hostname v0.4.0
   Compiling heck v0.5.0
    Checking iri-string v0.7.8
    Checking icu_normalizer v1.5.0
    Checking tokio-util v0.7.13
    Checking idna_adapter v1.2.0
    Checking idna v1.0.3
    Checking h2 v0.4.7
    Checking tower v0.5.2
    Checking url v2.5.4
    Checking uuid v1.17.0
    Checking backtrace v0.3.74
    Checking debugid v0.8.0
    Checking serde_urlencoded v0.7.1
   Compiling either v1.13.0
   Compiling pq-sys v0.6.3
    Checking sentry-types v0.38.1
    Checking allocator-api2 v0.2.21
    Checking regex-syntax v0.6.29
   Compiling dsl_auto_type v0.1.2
    Checking hashbrown v0.14.5
    Checking tower-http v0.6.6
   Compiling proc-macro-error2 v2.0.1
    Checking cipher v0.4.4
    Checking regex-automata v0.1.10
   Compiling pin-project-internal v1.1.8
   Compiling diesel_table_macro_syntax v0.2.0
    Checking block-buffer v0.10.4
    Checking scheduled-thread-pool v0.2.7
    Checking uname v0.1.1
    Checking encoding_rs v0.8.35
    Checking rustls-pki-types v1.10.1
    Checking sentry-core v0.38.1
    Checking hyper v1.6.0
    Checking overload v0.1.1
    Checking iana-time-zone v0.1.61
    Checking lazy_static v1.5.0
    Checking sentry-backtrace v0.38.1
    Checking sharded-slab v0.1.7
    Checking sentry-panic v0.38.1
    Checking sentry-debug-images v0.38.1
    Checking chrono v0.4.41
    Checking nu-ansi-term v0.46.0
    Checking pin-project v1.1.8
   Compiling validator_derive v0.20.0
    Checking digest v0.10.7
    Checking r2d2 v0.8.10
    Checking axum-core v0.5.2
   Compiling diesel_derives v2.2.3
    Checking hyper-util v0.1.13
    Checking matchers v0.1.0
    Checking chumsky v0.9.3
    Checking blowfish v0.9.1
    Checking serde_path_to_error v0.1.16
    Checking email-encoding v0.4.1
    Checking tracing-log v0.2.0
    Checking nom v8.0.0
    Checking thread_local v1.1.8
    Checking matchit v0.8.4
    Checking zeroize v1.8.1
    Checking email_address v0.2.9
    Checking quoted_printable v0.5.1
    Checking cpufeatures v0.2.17
    Checking fastrand v2.3.0
    Checking subtle v2.6.1
    Checking bcrypt v0.17.0
    Checking sha2 v0.10.9
    Checking tracing-subscriber v0.3.19
    Checking axum v0.8.4
    Checking validator v0.20.0
    Checking sentry-tower v0.38.1
    Checking dotenvy v0.15.7
    Checking diesel v2.2.10
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/registry/src/mirrors.tuna.tsinghua.edu.cn-4dc01642fd091eda/diesel-2.2.10/src/query_builder/ast_pass.rs:220:51
    |
220 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
